add call api to add, delete, update category

--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/SalesReportView.xaml
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/SalesReportView.xaml
@@ -22,7 +22,7 @@
 
                        Margin="32 16 32 16"/>
                 <!--Column Chart-->
-
+                <Border Height="420"
                     Background="White"
                     CornerRadius="12"
                     BorderThickness="1"
