--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/SalesReportView.xaml
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/SalesReportView.xaml
@@ -19,7 +19,6 @@
             <StackPanel Margin="0 0 0 16">
                 <TextBlock Text="Sales Report"
                        FontSize="24" FontWeight="Bold"
-
                        Margin="32 16 32 16"/>
                 <!--Column Chart-->
                 <Border Height="420"
@@ -50,7 +49,7 @@
                                       VerticalContentAlignment="Center" HorizontalContentAlignment="Center">
                                 </ComboBox>
                             </StackPanel>
-                            <!--Min Date-->
+                            --><!--Min Date--><!--
                             <StackPanel Margin="32 0 0 0">
                                 <TextBlock Text="Minimum Date:"
                                            FontSize="16"
@@ -68,7 +67,7 @@
                                 </DatePicker>
                             </StackPanel>
 
-                            <!--Max Date-->
+                            --><!--Max Date--><!--
                             <StackPanel Margin="32 0 0 0">
                                 <TextBlock Text="Maximum Date:"
                                            FontSize="16"
@@ -123,7 +122,7 @@
                             </lvc:CartesianChart.AxisY>
                         </lvc:CartesianChart>
                     </StackPanel>
-                </Border>
+                </Border>-->
 
                 <Border Background="White"
                         Height="440"
@@ -262,6 +261,7 @@
                         <!--Data-->
                         <DataGrid Grid.Row="1"
                                   Background="Transparent"
+                                  GridLinesVisibility="None" 
                                   AutoGenerateColumns="False" CanUserAddRows="False"
                                   CanUserResizeColumns="False"
                                   CanUserReorderColumns="False"
@@ -271,20 +271,136 @@
                             <DataGrid.Columns>
                                 <DataGridTextColumn Header="Index"
                                                     Width="44"
-                                                    Binding="{Binding AlternationIndex, RelativeSource={RelativeSource AncestorType=DataGridRow}}" />
+                                                    Binding="{Binding AlternationIndex, RelativeSource={RelativeSource AncestorType=DataGridRow}}">
+                                    <DataGridTextColumn.HeaderStyle>
+                                        <Style TargetType="DataGridColumnHeader">
+                                            <Setter Property="HorizontalContentAlignment" Value="Center" />
+                                            <Setter Property="FontSize" Value="12" />
+                                            <Setter Property="FontWeight" Value="SemiBold" />
+
+                                        </Style>
+                                    </DataGridTextColumn.HeaderStyle>
+                                    <DataGridTextColumn.ElementStyle>
+                                        <Style TargetType="TextBlock">
+                                            <Setter Property="Margin" Value="0 10 0 10"/>
+                                            <Setter Property="HorizontalAlignment" Value="Center" />
+                                            <Setter Property="FontSize" Value="12" />
+
+                                            <Setter Property="FontWeight" Value="DemiBold" />
+
+                                        </Style>
+                                    </DataGridTextColumn.ElementStyle>
+                                </DataGridTextColumn>
                                 <DataGridTextColumn Header="Book ID"
                                                     Binding="{Binding _id.book[0]._id}"
-                                                    Width="3*" />
+                                                    Width="3*">
+                                    <DataGridTextColumn.HeaderStyle>
+                                        <Style TargetType="DataGridColumnHeader">
+                                            <Setter Property="HorizontalContentAlignment" Value="Center" />
+                                            <Setter Property="FontSize" Value="12" />
+                                            <Setter Property="FontWeight" Value="SemiBold" />
+
+                                        </Style>
+                                    </DataGridTextColumn.HeaderStyle>
+                                    <DataGridTextColumn.ElementStyle>
+                                        <Style TargetType="TextBlock">
+                                            <Setter Property="Margin" Value="0 10 0 10"/>
+                                            <Setter Property="HorizontalAlignment" Value="Center" />
+                                            <Setter Property="FontSize" Value="12" />
+
+                                            <Setter Property="FontWeight" Value="DemiBold" />
+
+                                        </Style>
+                                    </DataGridTextColumn.ElementStyle>
+                                </DataGridTextColumn>
                                 <DataGridTextColumn Header="Book Title"
                                                     Binding="{Binding _id.book[0].name}"
-                                                    Width="3*" />
+                                                    Width="3*">
+                                    <DataGridTextColumn.HeaderStyle>
+                                        <Style TargetType="DataGridColumnHeader">
+                                            <Setter Property="HorizontalContentAlignment" Value="Center" />
+                                            <Setter Property="FontSize" Value="12" />
+                                            <Setter Property="FontWeight" Value="SemiBold" />
+
+                                        </Style>
+                                    </DataGridTextColumn.HeaderStyle>
+                                    <DataGridTextColumn.ElementStyle>
+                                        <Style TargetType="TextBlock">
+                                            <Setter Property="Margin" Value="0 10 0 10"/>
+                                            <Setter Property="HorizontalAlignment" Value="Center" />
+                                            <Setter Property="FontSize" Value="12" />
+
+                                            <Setter Property="FontWeight" Value="DemiBold" />
+
+                                        </Style>
+                                    </DataGridTextColumn.ElementStyle>
+                                </DataGridTextColumn>
                                 <DataGridTextColumn Header="Time Period"
                                                     Binding="{Binding _id.date}"
-                                                    Width="2*" />
+                                                    Width="2*">
+                                    <DataGridTextColumn.HeaderStyle>
+                                        <Style TargetType="DataGridColumnHeader">
+                                            <Setter Property="HorizontalContentAlignment" Value="Center" />
+                                            <Setter Property="FontSize" Value="12" />
+                                            <Setter Property="FontWeight" Value="SemiBold" />
+
+                                        </Style>
+                                    </DataGridTextColumn.HeaderStyle>
+                                    <DataGridTextColumn.ElementStyle>
+                                        <Style TargetType="TextBlock">
+                                            <Setter Property="Margin" Value="0 10 0 10"/>
+                                            <Setter Property="HorizontalAlignment" Value="Center" />
+                                            <Setter Property="FontSize" Value="12" />
+
+                                            <Setter Property="FontWeight" Value="DemiBold" />
+
+                                        </Style>
+                                    </DataGridTextColumn.ElementStyle>
+                                </DataGridTextColumn>
                                 <DataGridTextColumn Header="Sold Quantity"
                                                     Binding="{Binding totalQuantity}"
-                                                    Width="2*" />
+                                                    Width="2*">
+                                    <DataGridTextColumn.HeaderStyle>
+                                        <Style TargetType="DataGridColumnHeader">
+                                            <Setter Property="HorizontalContentAlignment" Value="Center" />
+                                            <Setter Property="FontSize" Value="12" />
+                                            <Setter Property="FontWeight" Value="SemiBold" />
+
+                                        </Style>
+                                    </DataGridTextColumn.HeaderStyle>
+                                    <DataGridTextColumn.ElementStyle>
+                                        <Style TargetType="TextBlock">
+                                            <Setter Property="Margin" Value="0 10 0 10"/>
+                                            <Setter Property="HorizontalAlignment" Value="Center" />
+                                            <Setter Property="FontSize" Value="12" />
+
+                                            <Setter Property="FontWeight" Value="DemiBold" />
+
+                                        </Style>
+                                    </DataGridTextColumn.ElementStyle>
+                                </DataGridTextColumn>
                             </DataGrid.Columns>
+                            <DataGrid.RowStyle>
+                                <Style TargetType="{x:Type DataGridRow}">
+
+                                    <Style.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter Property="Foreground" Value="#000000"/>
+
+                                        </Trigger>
+
+                                        <Trigger Property="IsSelected" Value="True">
+
+                                            <Setter Property="Background" Value="#2E29ED"/>
+                                            <Setter Property="Foreground" Value="#FFFFFF"/>
+                                        </Trigger>
+
+
+                                    </Style.Triggers>
+
+                                    <Setter Property="Foreground" Value="#788B9A"/>
+                                </Style>
+                            </DataGrid.RowStyle>
                         </DataGrid>
 
                         <!--Paging-->
