--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/SalesReportView.xaml
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/SalesReportView.xaml
@@ -49,7 +49,7 @@
                                       VerticalContentAlignment="Center" HorizontalContentAlignment="Center">
                                 </ComboBox>
                             </StackPanel>
-                            --><!--Min Date--><!--
+
                             <StackPanel Margin="32 0 0 0">
                                 <TextBlock Text="Minimum Date:"
                                            FontSize="16"
@@ -66,8 +66,6 @@
                                     </i:Interaction.Triggers>
                                 </DatePicker>
                             </StackPanel>
-
-                            --><!--Max Date--><!--
                             <StackPanel Margin="32 0 0 0">
                                 <TextBlock Text="Maximum Date:"
                                            FontSize="16"
@@ -122,7 +120,7 @@
                             </lvc:CartesianChart.AxisY>
                         </lvc:CartesianChart>
                     </StackPanel>
-                </Border>-->
+                </Border>
 
                 <Border Background="White"
                         Height="440"
